# myu

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  alembic.ini  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: publish.yml
bot/: core.py
bot/extensions/: economy.py  events.py  levels.py  lootboxes.py  mod.py
bot/utils/: __init__.py  constants.py  context.py  database.py  embed.py
docker/bot/: Dockerfile  entrypoint.sh
migrations/: env.py  script.py.mako
migrations/versions/: 63a422f1f8fd_create_balance_column.py  edcdc0ae504f_initial_user_table.py
templates/: changelog.j2
